# CodingGameWrapped

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: coding_game.test.cpp  matrix_transformations.test.cpp
